--- a/web/components/GameGrid/OpponentMetricsTable.module.scss
+++ b/web/components/GameGrid/OpponentMetricsTable.module.scss
@@ -65,7 +65,7 @@
 
 .titleText {
   font-family: v.$font-family-primary;
-  font-size: clamp(1.5rem, 4vw, 1.9rem); // Use clamp from PlayerPickupTable
+  font-size: clamp(1.5rem, 4vw, 1.8rem);
   font-weight: 100; // Lighter weight
   color: v.$text-color-primary;
   letter-spacing: 1.5px; // Match letter spacing
