--- a/web/components/PlayerPickupTable/PlayerPickupTable.module.scss
+++ b/web/components/PlayerPickupTable/PlayerPickupTable.module.scss
@@ -72,7 +72,7 @@
 .filtersTitle {
   width: 100%;
   text-align: left;
-  font-size: clamp(1.5rem, 4vw, 1.9rem); // Responsive font size
+  font-size: clamp(1.5rem, 4vw, 1.8rem); // Responsive font size
   font-weight: 100; // Lighter weight for title
   color: v.$text-color-primary;
   font-family: v.$font-family-primary;
@@ -413,6 +413,7 @@
 }
 
 .tableContainer {
+  margin-top: 30px;
   overflow-x: auto;
   background-color: v.$background-medium;
   border-radius: v.$border-radius;
