--- a/web/components/LinemateMatrix/index.module.scss
+++ b/web/components/LinemateMatrix/index.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  padding: vars.$space-xxl;
 
   @media only screen and (max-width: vars.$screen-medium-max) {
     flex-direction: column;
@@ -42,7 +43,7 @@
     background-color: #202020;
     color: #fff;
     display: grid;
-    width: 90%;
+    width: 85%;
     aspect-ratio: 1 / 1;
     padding: var(--spacing);
     border: 2px solid #07aae2;
